--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="content">
+  {% include pagination-newer.html %}
 
   {{ content }}
 
@@ -37,4 +38,5 @@ layout: default
   </article>
   {% endfor %}
 
+  {% include pagination-older.html %}
 </div>
