--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -2,7 +2,7 @@
   {% if site.hydeout.repo %}
     <a id="github-link"
        class="icon" title="Github Project" aria-label="Github Project"
-       href="{{ site.hydeout.repo }}">
+       href="https://github.com/soulkun/ECE5960-Fast-Robots">
       {% include svg/github.svg %}
     </a>
   {% endif %}
